[package]
name = "flog"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
description = "A fast logging library"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pprof = { version = "0.3.18", features = ["flamegraph"] }

[dev-dependencies]
criterion = "0.3.3"
sled = "0.34.3"
serde = "1.0.115"
bincode = "1.3.1"

[lib]
bench = false

[[bench]]
name = "pure"
harness = false

[[bench]]
name = "high_cpu"
harness = false

[[bench]]
name = "high_io"
harness = false

[[bench]]
name = "mixed"
harness = false

[[bench]]
name = "fork_join"
harness = false

